# All_Tasks_Together

project_1/: README.md  ok.py  requirements.txt  sql.sql
project_1/app/: database.py  main.py  models.py
project_1/routes/: todo.py
project_1/schemas/: todo.py
project_1/tests/: test_todo.py
project_2/: README.md
project_2/app/: models.py
project_2/schemas/: todo.py
project_3_(chat_with_pdf)/utils/: openai_utils.py
project_4(chat_with_pdf_using_supabase)/: README.md  app.py  project_directory_structure  requirements.txt
project_4(chat_with_pdf_using_supabase)/config/: settings.py
project_4(chat_with_pdf_using_supabase)/src/chat/: chat_service.py
project_4(chat_with_pdf_using_supabase)/src/database/: supabase_client.py
project_4(chat_with_pdf_using_supabase)/src/embeddings/: embeddings_service.py
project_4(chat_with_pdf_using_supabase)/utils/: helpers.py
project_5(Interact_with_csv)/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
project_5(Interact_with_csv)/src/: app.py
project_5(Interact_with_csv)/src/agents/: csv_agent.py  search_agent.py
project_6(Drawing_agent)/: README.md  main.py  requirements.txt
project_6(Drawing_agent)/diagram_agent/: __init__.py  agent.py  diagram_generator.py  tools.py
project_7(research_using_firecrawl_mcp)/: README.md  app.py  browser_mcp.json  main.py
project_8(hindi_content_generation_using_smolagents_and_firecrawl_mcp)/: README.md  browse_mcp.json  movie_script_outline_hindi_1747739541.txt  requirements.txt  research_module.py  script_agent.py
(+3 files in other folders)
