[tool.poetry]
name = "csv-analysis-agent"
version = "0.1.0"
description = "An AI-powered CSV analysis tool with web search capabilities"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
openai = "^1.0.0"
python-dotenv = "^1.0.0"
langchain = ">=0.0.350,<0.1"
langchain-openai = "^0.0.5"
langchain-experimental = "^0.0.47"
python-dateutil = "^2.8.2"
pydantic = "^2.0.0"
streamlit = "^1.30.0"
tabulate = "^0.9.0"
tavily-python = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 